# SFML_2D-Engine

./: README.md
2D_Base/: CMakeLists.txt  GameManager.cpp  GameManager.h  main.cpp
2D_Base/engine/app/: Application.cpp  Application.h
2D_Base/engine/components/: Component.cpp  Component.h  Transform.cpp  Transform.h
2D_Base/engine/core/: AppConfig.h  EngineContext.h  Input.cpp  Time.cpp  Time.h
2D_Base/engine/input/: ActionMap.h  Bindings.h  GamepadState.cpp  GamepadState.h  Input.cpp  Input.h  KeyboardState.cpp  KeyboardState.h  MouseState.cpp  MouseState.h  TextInput.cpp  TextInput.h
2D_Base/engine/scene/: GameObject.cpp  GameObject.h  Scene.h  SceneManager.cpp  SceneManager.h
2D_Base/game/input/: Bindings.h  InputEnums.h
